--- a/_notebooks/2021-06-07-blog-1.ipynb
+++ b/_notebooks/2021-06-07-blog-1.ipynb
@@ -526,7 +526,7 @@
    "id": "5bb80853",
    "metadata": {},
    "source": [
-    "Using these new adjusted parameters we do a forward propagation and calculate the loss and do a back propagation again is performed till you are satisfied."
+    "Using these new adjusted parameters we do a forward propagation and calculate the loss and do a back propagation."
    ]
   },
   {
